--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -2,6 +2,8 @@
 
 {% if post.header.teaser %}
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
+{% elsif post.hometeaser %} 
+  {% capture teaser %}{{ post.hometeaser }}{% endcapture %}
 {% else %}
   {% capture teaser %}{{ site.teaser }}{% endcapture %}
 {% endif %}
