--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -8,9 +8,9 @@
 
   <div class="author__avatar">
     {% if author.avatar contains "http" %}
-    	<img src="{{ author.avatar }}" alt="{{ author.name }}">
+    	<a href="/about"><img src="{{ author.avatar }}" alt="{{ author.name }}"></a>
     {% else %}
-    	<img src="{{ author.avatar | prepend: "/images/" | prepend: base_path }}" class="author__avatar" alt="{{ author.name }}">
+    	<a href="/about"><img src="{{ author.avatar | prepend: "/images/" | prepend: base_path }}" class="author__avatar" alt="{{ author.name }}"></a>
     {% endif %}
   </div>
 
