--- a/_includes/comments-providers/disqus.html
+++ b/_includes/comments-providers/disqus.html
@@ -1,6 +1,6 @@
 {% if site.comments.disqus.shortname %}
   <script type="text/javascript">
-  	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+  	/* * * CONFIGURATION VARIABLES * * */
   	var disqus_shortname = '{{ site.comments.disqus.shortname }}';
 
   	/* * * DON'T EDIT BELOW THIS LINE * * */
