--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -49,7 +49,7 @@
     <h4 class="page__share-title">{{ site.data.ui-text[site.locale].share_on_label }}</h4>
   {% endif %}
 
-  <a href="#" onclick="shareToFacebook();" rel="nofollow" target="_blank" class="btn btn--facebook" title="{{ site.data.ui-text[site.locale].share_on_label }} Facebook"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i><span> Facebook</span></a>
+  <a href="#" onclick="shareToFacebook();" rel="nofollow" class="btn btn--facebook" title="{{ site.data.ui-text[site.locale].share_on_label }} Facebook"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i><span> Facebook</span></a>
 
   <a href="https://twitter.com/intent/tweet?source={{ url }}&amp;text={{ page.title }}:%20{{ url }}&amp;via={{ site.twitter.username }}" target="_blank" class="btn btn--twitter" title="{{ site.data.ui-text[site.locale].share_on_label }} Twitter"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i><span> Twitter</span></a>
 
