--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#396ac9">
-<meta name="theme-color" content="#396ac9">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#445dec">
+<meta name="theme-color" content="#445dec">
 
 <!-- end custom head snippets -->
