Include GooglePlus with short url version

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -45,7 +45,7 @@
       {% endif %}
       {% if author.google_plus %}
         <!-- https://plus.google.com/+ -->
-        <li><a href="https://plus.google.com/u/0/{{ author.google_plus }}"><i class="fa fa-fw fa-google-plus-square" aria-hidden="true"></i> Google+</a></li>
+        <li><a href="https://plus.google.com/+{{ author.google_plus }}"><i class="fa fa-fw fa-google-plus-square" aria-hidden="true"></i> Google+</a></li>
       {% endif %}
       {% if author.linkedin %}
         <li><a href="https://www.linkedin.com/in/{{ author.linkedin }}"><i class="fa fa-fw fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a></li>
