Verify for Pinterest

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,4 +8,7 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#445dec">
 <meta name="theme-color" content="#445dec">
 
+<!-- Pinterest -->
+<meta name="p:domain_verify" content="fc0598d05cf427f1fdc32fd961ce21ca"/>
+
 <!-- end custom head snippets -->
