--- a/_includes/head/quiz_head.html
+++ b/_includes/head/quiz_head.html
@@ -11,7 +11,11 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
 
-<style type="text/css"> html{ margin: 0; height: 100%; overflow: hidden; } iframe{ position: absolute; left:0; right:0; bottom:0; top:0; border:0; } </style> 
+<style type="text/css"> 
+	html{ margin: 0; height: 100%; overflow: hidden; } 
+	iframe{ position: absolute; left:0; right:0; bottom:0; top:0; border:0; } 
+	.iparent { background:url(/images/loading.gif) center center no-repeat; width: 100%; height: 100%; z-index: 1000; display:block; position: absolute; }
+</style> 
 
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
