--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,14 +1,14 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#445dec">
-<meta name="theme-color" content="#445dec">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+<link rel="manifest" href="/manifest.json" />
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#445dec" />
+<meta name="theme-color" content="#445dec" />
 
 <!-- Pinterest -->
-<meta name="p:domain_verify" content="fc0598d05cf427f1fdc32fd961ce21ca"/>
+<meta name="p:domain_verify" content="fc0598d05cf427f1fdc32fd961ce21ca" />
 
 <!-- end custom head snippets -->
