--- a/_includes/head/quiz_head.html
+++ b/_includes/head/quiz_head.html
@@ -1,15 +1,15 @@
 {% include base_path %}
 
-<meta charset="utf-8">
+<meta charset="utf-8" />
 
 {% include seo.html %}
 
-<link href="{{ base_path }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+<link href="{{ base_path }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed" />
 
 <!-- http://t.co/dKP3o1e -->
-<meta name="HandheldFriendly" content="True">
-<meta name="MobileOptimized" content="320">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
+<meta name="HandheldFriendly" content="True" />
+<meta name="MobileOptimized" content="320" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /> 
 
 <style type="text/css"> 
 	html{ margin: 0; height: 100%; overflow: hidden; } 
@@ -22,6 +22,6 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css" />
 
-<meta http-equiv="cleartype" content="on">
+<meta http-equiv="cleartype" content="on" />
