--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -43,60 +43,59 @@
   {% assign seo_author_twitter = seo_author_twitter | replace: "@", "" %}
 {% endif %}
 
-<meta property="og:locale" content="{{ site.locale }}">
-<meta property="og:site_name" content="{{ site.title }}">
-<meta property="og:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}">
+<meta property="og:locale" content="{{ site.locale }}" />
+<meta property="og:site_name" content="{{ site.title }}" />
+<meta property="og:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}" />
 
 {% if seo_url %}
-  <link rel="canonical" href="{{ page.url | prepend: seo_url | replace: "/index.html", "/" }}">
-  <meta property="og:url" content="{{ page.url | prepend: seo_url | replace: "/index.html", "/" }}">
+  <link rel="canonical" href="{{ page.url | prepend: seo_url | replace: "/index.html", "/" }}" />
+  <meta property="og:url" content="{{ page.url | prepend: seo_url | replace: "/index.html", "/" }}" />
 {% endif %}
 
 {% if page.excerpt %}
-  <meta property="og:description" content="{{ seo_description }}">
+  <meta property="og:description" content="{{ seo_description }}" />
 {% endif %}
 
 {% if site.twitter.username %}
-  <meta name="twitter:site" content="@{{ site.twitter.username | replace: "@", "" }}">
-  <meta name="twitter:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}">
-  <meta name="twitter:description" content="{{ seo_description }}">
-  <meta name="twitter:url" content="{{ canonical_url }}">
+  <meta name="twitter:site" content="@{{ site.twitter.username | replace: "@", "" }}" />
+  <meta name="twitter:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}" />
+  <meta name="twitter:description" content="{{ seo_description }}" />
+  <meta name="twitter:url" content="{{ canonical_url }}" />
 
   {% if page.header.image %}
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="{% if page.header.image contains "http" %}{{ page.header.image }}{% else %}{{ page.header.image | prepend: "/images/" | prepend: base_path }}{% endif %}">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="{% if page.header.image contains "http" %}{{ page.header.image }}{% else %}{{ page.header.image | prepend: "/images/" | prepend: base_path }}{% endif %}" />
   {% else %}
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary" />
     {% if site.og_image %}
-      <meta name="twitter:image" content="{{ site.og_image | prepend: "/images/" | prepend: base_path }}">
+      <meta name="twitter:image" content="{{ site.og_image | prepend: "/images/" | prepend: base_path }}" />
     {% endif %}
   {% endif %}
 
   {% if seo_author_twitter %}
-    <meta name="twitter:creator" content="@{{ seo_author_twitter }}">
+    <meta name="twitter:creator" content="@{{ seo_author_twitter }}" />
   {% endif %}
 {% endif %}
 
 {% if site.facebook %}
   {% if site.facebook.publisher %}
-    <meta property="article:publisher" content="{{ site.facebook.publisher }}">
+    <meta property="article:publisher" content="{{ site.facebook.publisher }}" />
   {% endif %}
-
   {% if site.facebook.app_id %}
-    <meta property="fb:app_id" content="{{ site.facebook.app_id }}">
+    <meta property="fb:app_id" content="{{ site.facebook.app_id }}" />
   {% endif %}
 {% endif %}
 
 {% if page.header.image %}
-  <meta property="og:image" content="{% if page.header.image contains "http" %}{{ page.header.image }}{% else %}{{ page.header.image | prepend: "/images/" | prepend: base_path }}{% endif %}">
+  <meta property="og:image" content="{% if page.header.image contains "http" %}{{ page.header.image }}{% else %}{{ page.header.image | prepend: "/images/" | prepend: base_path }}{% endif %}" />
 {% endif %}
 
 {% if page.share %}
-  <meta property="og:type" content="article">
+  <meta property="og:type" content="article" />
   {% for tag in page.tags %}<meta property="article:tag" content="{{ tag }}" />
   {% endfor %}
 {% else %}
-  <meta property="og:type" content="website">
+  <meta property="og:type" content="website" />
 {% endif %}
 
 {% if page.date %}
