Activate facebook pixel tracking

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -10,3 +10,8 @@
 {% endcase %}
 
 {% endif %}
+
+
+{% if site.facebook_pixel_id %}
+	{% include /analytics-providers/facebook-pixel.html %}
+{% endif %}
