Reorganise existing policies

--- a/_includes/policy_affiliate.html
+++ b/_includes/policy_affiliate.html
@@ -2,6 +2,6 @@
 
 <section class="page__meta">
 
-  This post contains affiliate links. Please see my <a href="/disclosure-policy/" rel="nofollow">disclosure policy</a>.
+  This post contains affiliate links. Please see my <a href="/policies#disclosure-policy" rel="nofollow">disclosure policy</a>.
 
 </section>
