--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,5 +36,5 @@
 <a href="{{ site.url }}/policies/" rel="nofollow" target="_blank">Privacy Policy</a> | <a href="{{ site.url }}/terms-conditions/" rel="nofollow" target="_blank">Terms and Conditions</a>
 </div>
 <div class="page__footer-copyright">
-{{ site.data.ui-text[site.locale].powered_by }} <a href="http://jekyllrb.com" rel="nofollow" target="_blank">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow" target="_blank">Minimal Mistakes Theme</a>
+{{ site.data.ui-text[site.locale].powered_by }} <a href="http://jekyllrb.com" rel="nofollow" target="_blank">Jekyll</a> &amp; <a href="https://mmistakes.github.io/minimal-mistakes/" rel="nofollow" target="_blank">MM Theme</a>
 </div>
